--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        <script src="https://kit.fontawesome.com/2e0ad57f83.js" crossorigin="anonymous"></script>
+        script(src="https://kit.fontawesome.com/2e0ad57f83.js", crossorigin="anonymous")
         title #{pageTitle} | #{siteName}
     body
         include ../partials/header
