--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -2,13 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  .video__player {
-    width: 100%;
-    max-width: 850px;
-    video {
-      width: 100%;
-    }
-  }
   .video__info {
     width: 100%;
     max-width: 850px;
@@ -16,6 +9,11 @@
     button {
       width: 100px;
       margin-bottom: 25px;
+    }
+    .video__author {
+      a {
+        color: #3498db;
+      }
     }
     .video__title,
     .video__views,
