--- a/assets/scss/partials/videoPlayer.scss
+++ b/assets/scss/partials/videoPlayer.scss
@@ -27,6 +27,8 @@
     .videoPlayer__column:first-child {
       display: flex;
       align-items: center;
+      width: 170px;
+      justify-content: space-between;
       #jsVolumeBtn {
         margin-right: 10px;
       }
