--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -4,6 +4,7 @@ html
         script(src="https://kit.fontawesome.com/2e0ad57f83.js", crossorigin="anonymous")
         title #{pageTitle} | #{siteName}
         link(rel="stylesheet", href="/static/styles.css")
+        link(rel="shortcut icon", href="#")
     body
         include ../partials/header
         main
